# mir-algorithm-1

./: copy_docs.sh  cp_styles.sh  generate_menu.sh  latest.sh  meson.build  meson_options.txt  wildcard_d.sh
